Integrate latest origin changes

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from models.model import ViTPose\n",
-    "from configs.ViTPose_base_coco_256x192 import model as model_cfg"
+    "from vitpose.models.model import ViTPose\n",
+    "from vitpose.configs.ViTPose_base_coco_256x192 import model as model_cfg"
    ]
   },
   {
